--- a/exercise_1/index.html
+++ b/exercise_1/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./styles/main.scss" />
+    <title>Layout: exercise 1</title>
+  </head>
+  <body>
+    <div class="palette">
+      <div class="palette1-darken4">Darken 4</div>
+      <div class="palette1-darken3">Darken 3</div>
+      <div class="palette1-darken2">Darken 2</div>
+      <div class="palette1-darken1">Darken 1</div>
+      <div class="palette1-baseColor">Base color</div>
+      <div class="palette1-lighten1">Lighten 1</div>
+      <div class="palette1-lighten2">Lighten 2</div>
+      <div class="palette1-lighten3">Lighten 3</div>
+      <div class="palette1-lighten4">Lighten 4</div>
+    </div>
+    <div class="palette">
+      <div class="palette2-darken4">Darken 4</div>
+      <div class="palette2-darken3">Darken 3</div>
+      <div class="palette2-darken2">Darken 2</div>
+      <div class="palette2-darken1">Darken 1</div>
+      <div class="palette2-baseColor">Base color</div>
+      <div class="palette2-lighten1">Lighten 1</div>
+      <div class="palette2-lighten2">Lighten 2</div>
+      <div class="palette2-lighten3">Lighten 3</div>
+      <div class="palette2-lighten4">Lighten 4</div>
+    </div>
+    <div class="palette">
+      <div class="palette3-darken4">Darken 4</div>
+      <div class="palette3-darken3">Darken 3</div>
+      <div class="palette3-darken2">Darken 2</div>
+      <div class="palette3-darken1">Darken 1</div>
+      <div class="palette3-baseColor">Base color</div>
+      <div class="palette3-lighten1">Lighten 1</div>
+      <div class="palette3-lighten2">Lighten 2</div>
+      <div class="palette3-lighten3">Lighten 3</div>
+      <div class="palette3-lighten4">Lighten 4</div>
+    </div>
+  </body>
 </html>
