--- a/exercise_2/index.html
+++ b/exercise_2/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./styles/main.scss" />
+    <title>Layout exercise 2</title>
+  </head>
+  <body>
+    <div>Base</div>
+    <div class="important-box">Important</div>
+    <div class="warning-box">Warning</div>
+    <p class="principal-font">Principal font</p>
+    <p class="secondary-font">Secondary font</p>
+    <div class="shadow-box">Box with shadow</div>
+  </body>
 </html>
