--- a/exercise_4/index.html
+++ b/exercise_4/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./styles/main.scss" />
+    <title>Layout exercise 4</title>
+  </head>
+  <body>
+    <div class="container">
+      <section class="navigation-bar item">
+        <div class="menu">
+          <a href="https://css-tricks.com/">CSS TRICKS</a>
+          <a href="https://www.w3.org/">W3C</a>
+          <a href="https://cssinjs.org/">JSS</a>
+        </div>
+      </section>
+      <section class="sectionA item">
+        <h4>Content A</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel
+          magna urna. Integer sodales et nisi at tempor. Phasellus cursus turpis
+          a mi eleifend condimentum. Etiam ex neque, maximus eget lorem nec,
+          maximus tempus eros. Vestibulum quis ante nec purus porttitor aliquam.
+          Mauris et nulla porttitor, congue odio vitae, fringilla risus. Morbi
+          et urna eget lectus commodo tempor a id tellus. Proin cursus facilisis
+          consectetur. Mauris faucibus, lacus eget maximus dignissim, quam
+          ligula volutpat ex, lobortis vestibulum est quam et elit. Integer id
+          metus imperdiet, eleifend diam in, lacinia velit. Donec placerat
+          ullamcorper placerat. Suspendisse nec ultricies purus, at sagittis
+          sem. Vestibulum lorem nunc, sollicitudin a lacinia non, tempus sed
+          sapien. Sed diam nunc, convallis non turpis et, condimentum vestibulum
+          diam. Donec efficitur erat ut neque condimentum, eu eleifend ligula
+          porta.
+        </p>
+      </section>
+      <section class="sectionB item">
+        <h4>Content B</h4>
+        <p>
+          Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+          per inceptos himenaeos. Cras placerat est non sapien lobortis, et
+          fermentum nisl vehicula. Mauris felis purus, sodales efficitur
+          sollicitudin nec, rhoncus vel nibh. Maecenas et ornare ex. Mauris
+          tristique faucibus quam eu pretium. Morbi a ultrices orci. Vestibulum
+          ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+          Curae; Nulla gravida risus id felis laoreet suscipit. Pellentesque
+          finibus accumsan pretium. Nullam fermentum justo id ligula dignissim
+          auctor. Nulla facilisi.
+        </p>
+      </section>
+    </div>
+  </body>
 </html>
